<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 Artem Yankovskiy (artemyankovskiy@gmail.com).
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">Azimuth plugin</string>
    <string name="app_title">Azimuth</string>
    <string name="app_title_free">Azimuth (Free)</string>
    
    <string name="progress_dialog_title">Calculation</string>
    <string name="progress_dialog_message">Calculation in progress. Please wait</string>

    <string name="mapType_map">Map</string>
    <string name="mapType_terrain">Terrain</string>
    <string name="mapType_hybrid">Hybrid</string>
    <string name="mapType_satellite">Satellite</string>
    
    <string name="mapDateSelection">Select a date</string>
    <string name="mapTimeSelection">Select a time</string>
    
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    
    <string name="saveLocationDialog_locationName">Location name</string>
    <string name="saveLocationDialog_title">Save location</string>
    <string name="saveLocationDialog_message">Enter location name</string>
    
    <string name="deleteConfirmationDialog_title">Delete confirmation</string>
    <string name="deleteConfirmationDialog_message">Do you really wish remove the record \"%s\"?</string>
    
    <string name="drawer_title">Select a saved location</string>
    
    <string name="settings_24HourMode_title">24 hour mode</string>
    <string name="settings_24HourMode_message">Sets 24 hour mode</string>
    
    <string name="settings_internetTimeZone_title">Internet time zone</string>
    <string name="settings_internetTimeZone_message">Gets a time zone from Internet-servers</string>
    
    <string name="settings_showTip_title">Show tip</string>
    <string name="settings_showTip_message">Show tip on application startup</string>
    
    <string name="menu_item_timeZone">Time zone</string>
    <string name="menu_item_rate">Rate</string>
    <string name="menu_item_feedback">Feedback</string>
    <string name="menu_item_settings">Settings</string> 
    
    <string name="timeZoneSelectionDialog_title">Choose a time zone</string>
    
    <string name="errorDialog_title">Error</string>
    <string name="error_zoomToSmall">The zoom is to small. Please increase</string>
    <string name="error_timeZoneIsNotDefined">Time zone is not defined. If the problem persists, check your Internet connection, or disable the settings to obtain the time zone from the Internet and select it by yourself in the application menu</string>
    <string name="error_noSun">There is no sun at selected time and location. You can change time and/or location</string>
    <string name="error_availableOnlyInPaid">This feature available only in full version</string>
    <string name="error_geoCoderNotAvailable">Could not determine coordinates for specific address. Please, check your Internet connection</string>
    <string name="error_notFound">No results found for address \"%s\"</string>
        
    <string name="author_email">artemyankovskiy@gmail.com</string>
    <string name="chooseEmailApp">Choose the app for sending of email</string>
    
    <string name="startupHint">Long tap on map to get new location</string>
    
    <string name="menu_item_search">Search</string>
    <string name="search_hint">Search by address</string>
</resources>
