<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_map_normal"
        android:showAsAction="never"
        android:title="@string/mapType_map">
    </item>
    <item
        android:id="@+id/item_map_terrain"
        android:showAsAction="never"
        android:title="@string/mapType_terrain">
    </item>
    <item
        android:id="@+id/item_map_hybrid"
        android:showAsAction="never"
        android:title="@string/mapType_hybrid">
    </item>
    <item
        android:id="@+id/item_map_satellite"
        android:showAsAction="never"
        android:title="@string/mapType_satellite">
    </item>
    <item
        android:id="@+id/item_timeZone"
        android:showAsAction="never"
        android:title="@string/menu_item_timeZone">
    </item>
    <item
        android:id="@+id/item_settings"
        android:showAsAction="never"
        android:title="@string/menu_item_settings">
    </item>
    <item
        android:id="@+id/item_rate"
        android:showAsAction="never"
        android:title="@string/menu_item_rate">
    </item>
    <item
        android:id="@+id/item_feedback"
        android:showAsAction="never"
        android:title="@string/menu_item_feedback">
    </item>
    <item
        android:id="@+id/item_dateTime"
        android:icon="@drawable/ic_action_go_to_today"
        android:showAsAction="always"
        android:title="@string/mapDateSelection">
    </item>
    <item
        android:id="@+id/item_confirmSelection"
        android:icon="@drawable/ic_action_done"
        android:showAsAction="always|withText"
        android:title="@string/mapConfirmSelection"
        android:visible="false">
    </item>

</menu>